fix: Descale title
The title was a bit too big and not well setup for the menu buttons.
This makes it a bit thinner, alongside which the menu/stats buttons can
fit.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     font-family: sans-serif;
     user-select: none;
+    margin: 0;
 }
 
 #container{
@@ -17,15 +18,17 @@ body{
         margin-left: 5%;
         left: 0;
     }
-  }
+}
 
-#title{
+#header{
     width: 100%;
-    text-align: center;
-    font-size: 100px;
+    height: 60px;
+    margin: 20px 0px 20px 0px;
     font-weight: 800;
+    font-size: 60px;
+    line-height: 60px;
+    text-align: center;
     color: rgb(2, 172, 132);
-    margin: 10px 0px 10px 0px;
 }
 
 #scale_container{
@@ -129,7 +132,6 @@ sub{
     letter-spacing: 1px;
     height: 40px;
     line-height: 40px;
-    height: 100%;
     background-color: rgb(0, 204, 156);
     display: inline-block;
     color: white;
